--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-torch==2.2.2+cu118; platform_system == "Linux"
-torch==2.2.2; platform_system != "Linux"
-numpy==1.26.4
+numpy
 pandas
 scipy
 tqdm
